Connect to n8n webhook

--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
     </div>
 
     <script>
-        // Configuration - Replace with your n8n webhook URL
-        const N8N_WEBHOOK_URL = 'https://your-n8n-instance.com/webhook/attendance';
+        // Configuration - Replace with your actual n8n webhook URL
+        const N8N_WEBHOOK_URL = 'https://n8n.srv970132.hstgr.cloud/webhook/cc312adc-af32-48d3-88c2-af22dae286ff';
 
         // Global variables
         let uploadedFile = null;
