Vercel Deployment read -V2

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         }
 
         // Initialize
-        console.log('Attendance Upload System initialized');
+        console.log('Attendancea Upload System initialized');
         console.log('Environment:', environment);
         console.log('Webhook URL:', N8N_WEBHOOK_URL);
     </script>
